# vimde

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  VERSION  requirements.txt  setup.cfg  todo.md  vimde  vimde.spec
conf.d/: tmuxderc  vimderc
doc/: vimde.1  vimde.md
man/: vimde.1  vimde.html  vimde.md
vimde/: __init__.py  cli.py  utils.py
vimde.d/: tmuxderc  vimderc
