[metadata]
name = vimde
version = attr: vimde.__version__
url = https://github.com/c4t3l/vimde
author = Robby Callicotte
author_email = rcallicotte@fedoraproject.org
description = Vim+Tmux based IDE
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  License :: OSI Approved :: MIT License

[options]
install_requires =
  bpython
  click
  jedi
  msgpack
  pynvim
  powerline-status
  pudb
  requests
  setproctitle
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
  vimde = vimde.cli:main
